--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -152,6 +152,40 @@
         </div>
       </div>
     </section>
+    <section class="section notification is-warning">
+      <nav class="level">
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Pros per account</p>
+            <p class="title">2</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Critical Partners</p>
+            <p class="title">12</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Principals' Years of Experience</p>
+            <p class="title">100</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Tickets Resolved Annually</p>
+            <p class="title">3,000+</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Hours Booked over 5 Years</p>
+            <p class="title">60,000+</p>
+          </div>
+        </div>
+      </nav>
+    </section>
     <section class="section">
       <div class="container">
         <div class="columns">
