Add hamburger menu js and svg separator

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script type='text/javascript' src='/js/main.min.js'></script>
+    <script src="https://use.typekit.net/fwz4gtk.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     <!-- Code that all your templates share, like a header -->
