--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -23,6 +23,30 @@
           </div>
         </div>
       </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg"  width="100%" height="198">
+                <defs>
+                  <linearGradient id="a" x1="50%" x2="50%" y1="-10.959%" y2="100%">
+                    <stop stop-color="#57BBC1" stop-opacity=".40" offset="0%"/>
+                    <stop stop-color="#015871" offset="100%"/>
+                  </linearGradient>
+                  <linearGradient id="b" x1="50%" x2="50%" y1="-10.959%" y2="100%">
+                    <stop stop-color="#59ab60" stop-opacity="1" offset="0%"/>
+                    <stop stop-color="#233b00" offset="100%"/>
+                  </linearGradient>
+                  <linearGradient id="c" x1="50%" x2="50%" y1="-10.959%" y2="100%">
+                    <stop stop-color="#3999d8" stop-opacity="1" offset="0%"/>
+                    <stop stop-color="#2980b9" offset="60%"/>
+                  </linearGradient>
+                </defs>
+                <path transform="translate(700, 0)" fill="url(#b)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+                <path transform="translate(-900, 0)" fill="url(#b)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+                <path transform="translate(0, 0)" fill="url(#a)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" transform="matrix(-1 0 0 1 1600 0)"/>
+                <path transform="translate(1600, 0)" fill="url(#a)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" transform="matrix(-1 0 0 1 1600 0)"/>
+                <path transform="translate(1000, 75)" fill="url(#c)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+                <path transform="translate(-600, 75)" fill="url(#c)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+      </svg>
+
     </section>
     <section class="section">
     <div class="tile is-ancestor">
@@ -152,7 +176,7 @@
         </div>
       </div>
     </section>
-    <section class="section notification is-warning">
+    <section class="section notification is-warning is-marginless">
       <nav class="level">
         <div class="level-item has-text-centered">
           <div>
@@ -186,7 +210,7 @@
         </div>
       </nav>
     </section>
-    <section class="section">
+    <section class="section notification is-light">
       <div class="container">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
@@ -362,5 +386,4 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="lib/main.js"></script>
 {{ end }}
