--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -52,7 +52,7 @@
           <p class="control">
             <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="http://localhost:4000" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=http://localhost:4000&amp;via=jgthms">
               <span class="icon">
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-twitter has-text-twitter"></i>
               </span>
               <span>
                 Tweet
