--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -5,7 +5,7 @@
     {{- partial "nav1.html" . -}}
 {{ end }}
 {{ define "main" }}
-   <section class="hero is-medium hero-bg-atagotunnel">
+   <section class="hero is-medium hero-bg-totsukabridge">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
@@ -19,6 +19,27 @@
                   <br>
                   It includes everything you need to <strong>build your own website</strong> with Bulma.
               </h2>
+
+              <div id="quickviewDefault" class="quickview">
+  <header class="quickview-header">
+    <p class="title">Quickview title</p>
+    <span class="delete" data-dismiss="quickview"></span>
+  </header>
+
+  <div class="quickview-body">
+    <div class="quickview-block">
+      Tools like Zerobin <br>
+      Contact Info<br>
+    </div>
+  </div>
+
+  <footer class="quickview-footer">
+
+  </footer>
+</div>
+
+<button class="button is-primary" data-show="quickview" data-target="quickviewDefault">Show quickview</button>
+
             </div>
           </div>
         </div>
@@ -35,8 +56,8 @@
                     <stop stop-color="#233b00" offset="100%"/>
                   </linearGradient>
                   <linearGradient id="c" x1="50%" x2="50%" y1="-10.959%" y2="100%">
-                    <stop stop-color="#3999d8" stop-opacity="1" offset="0%"/>
-                    <stop stop-color="#2980b9" offset="60%"/>
+                    <stop stop-color="#4a4a4a" stop-opacity="1" offset="0%"/>
+                    <stop stop-color="#363636" offset="60%"/>
                   </linearGradient>
                 </defs>
                 <path transform="translate(700, 0)" fill="url(#b)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
@@ -85,6 +106,26 @@
                 <p class="subtitle">Subtitle</p>
                 <div class="content">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
+                  <a class="button is-primary is-small modal-button" data-target="#modal">Launch example modal</a>
+
+                   <div class="modal" id="modal">
+                    <div class="modal-background"></div>
+                    <div class="modal-card">
+                      <header class="modal-card-head">
+                        <p class="modal-card-title">Modal title</p>
+                        <button class="delete modal-button" data-target="#modal" aria-label="close"></button>
+                      </header>
+                      <section class="modal-card-body">
+                        <!-- Content ... -->
+                        Stuff
+                      </section>
+                      <footer class="modal-card-foot">
+                        <button class="button is-success">Save changes</button>
+                        <button class="button modal-button" data-target="#modal">Cancel</button>
+                      </footer>
+                    </div>
+                  </div>
+
                 </div>
               </article>
             </div>
@@ -210,7 +251,115 @@
         </div>
       </nav>
     </section>
-    <section class="section notification is-light">
+    <section class="section is-marginless notification is-danger">
+      <div class="columns is-centered">
+        <div class="column">
+          <div class="card">
+            <header class="card-header">
+              <p class="card-header-title">
+                Post about this and that and the other...
+              </p>
+              <a href="#" class="card-header-icon" aria-label="more options">
+                <span class="icon">
+                  <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+              </a>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+                <br>
+                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <a href="#" class="card-footer-item">More Info</a>
+              <a href="#" class="card-footer-item">All Posts</a>
+            </footer>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <header class="card-header">
+              <p class="card-header-title">
+                Post about this and that and the other...
+              </p>
+              <a href="#" class="card-header-icon" aria-label="more options">
+                <span class="icon">
+                  <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+              </a>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+                <br>
+                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <a href="#" class="card-footer-item">More Info</a>
+              <a href="#" class="card-footer-item">All Posts</a>
+            </footer>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <header class="card-header">
+              <p class="card-header-title">
+                Post about this and that and the other...
+              </p>
+              <a href="#" class="card-header-icon" aria-label="more options">
+                <span class="icon">
+                  <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+              </a>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+                <br>
+                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <a href="#" class="card-footer-item">More Info</a>
+              <a href="#" class="card-footer-item">All Posts</a>
+            </footer>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <header class="card-header">
+              <p class="card-header-title">
+                Post about this and that and the other...
+              </p>
+              <a href="#" class="card-header-icon" aria-label="more options">
+                <span class="icon">
+                  <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+              </a>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+                <br>
+                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <a href="#" class="card-footer-item">More Info</a>
+              <a href="#" class="card-footer-item">All Posts</a>
+            </footer>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section notification is-light is-marginless is-radiusless">
       <div class="container">
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
@@ -357,14 +506,41 @@
                 <a class="button is-medium is-link" href="http://bulma.io/documentation/overview/start/">
                   <strong class="has-text-weight-semibold">Documentation</strong>
                 </a>
+                <br><br>
               </p>
             </div>
           </div>
         </div>
       </div>
+
+
+
     </section>
-    <footer class="footer has-text-centered">
+
+    <div class="section has-text-primary is-light is-paddingless is-radiusless">
+      <svg xmlns="http://www.w3.org/2000/svg"  width="100%" height="198">
+        <rect width="100%" height="100%" fill="#F5F5F5"/>
+				<defs>
+					<linearGradient id="aa" x1="50%" x2="50%" y1="-10.959%" y2="100%">
+						<stop stop-color="#16b2c7" stop-opacity=".80" offset="0%"/>
+						<stop stop-color="#fff" offset="100%"/>
+					</linearGradient>
+					<linearGradient id="cc" x1="50%" x2="50%" y1="-10.959%" y2="100%">
+						<stop stop-color="#4a4a4a" stop-opacity="1" offset="00%"/>
+						<stop stop-color="#363636" offset="70%"/>
+					</linearGradient>
+				</defs>
+				<path transform="translate(-400, 0)" fill="url(#aa)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" transform="matrix(-1 0 0 1 1600 0)"/>
+				<path transform="translate(500, 50)" fill="url(#cc)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+				<path transform="translate(-1100, 50)" fill="url(#cc)" fill-rule="evenodd" d="M.005 121C311 121 409.898-.25 811 0c400 0 500 121 789 121v77H0s.005-48 .005-77z" />
+
+			</svg>
+    </div>
+
+    <footer class="footer has-text-centered notification is-dark is-marginless">
+
       <div class="container">
+
          <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
             <p>
