--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -61,7 +61,7 @@ $colors: map-merge($colors, $addColors);
 @import "../../bower_components/bulma-slider/dist/bulma-slider";
 @import "../../bower_components/bulma-steps/dist/bulma-steps";
 @import "../../bower_components/bulma-switch/dist/bulma-switch";
-@import "../../bower_components/bulma-tagsinput/dist/bulma-tagsinput";
+// @import "../../bower_components/bulma-tagsinput/dist/bulma-tagsinput";
 @import "../../bower_components/bulma-timeline/dist/bulma-timeline";
 @import "../../bower_components/bulma-tooltip/dist/bulma-tooltip";
 
@@ -73,7 +73,7 @@ strong {
    font-weight: $strong-weight;
    }
 
-$backgrounds: (bg-templecolumn: '/img/eSolia-Cogley-Azabudai-to-Atago-Tokyo-20131031-5318b.jpg', bg-atagotunnel: '/img/eSolia-Cogley-Azabudai-to-Atago-Tokyo-20131031-5355b.jpg', bg-networkswitch: '/img/eSolia-Cogley-Network-Switch-1.jpg');
+$backgrounds: (bg-totsukabridge: '/img/Cogley-Banner-JR-Totsuka-Bridge-2-mono.jpg', bg-templecolumn: '/img/eSolia-Cogley-Azabudai-to-Atago-Tokyo-20131031-5318b.jpg', bg-atagotunnel: '/img/eSolia-Cogley-Azabudai-to-Atago-Tokyo-20131031-5355b.jpg', bg-networkswitch: '/img/eSolia-Cogley-Network-Switch-1.jpg');
 
 @each $key, $image in $backgrounds {
   .hero-#{$key} {
