Moved modals to bottom of page

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -20,25 +20,7 @@
                   It includes everything you need to <strong>build your own website</strong> with Bulma.
               </h2>
 
-              <div id="quickviewDefault" class="quickview">
-  <header class="quickview-header">
-    <p class="title">Quickview title</p>
-    <span class="delete" data-dismiss="quickview"></span>
-  </header>
-
-  <div class="quickview-body">
-    <div class="quickview-block">
-      Tools like Zerobin <br>
-      Contact Info<br>
-    </div>
-  </div>
-
-  <footer class="quickview-footer">
-
-  </footer>
-</div>
-
-<button class="button is-primary" data-show="quickview" data-target="quickviewDefault">Show quickview</button>
+              <button class="button is-primary" data-show="quickview" data-target="quickviewDefault">Show quickview</button>
 
             </div>
           </div>
@@ -108,23 +90,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
                   <a class="button is-primary is-small modal-button" data-target="#modal">Launch example modal</a>
 
-                   <div class="modal" id="modal">
-                    <div class="modal-background"></div>
-                    <div class="modal-card">
-                      <header class="modal-card-head">
-                        <p class="modal-card-title">Modal title</p>
-                        <button class="delete modal-button" data-target="#modal" aria-label="close"></button>
-                      </header>
-                      <section class="modal-card-body">
-                        <!-- Content ... -->
-                        Stuff
-                      </section>
-                      <footer class="modal-card-foot">
-                        <button class="button is-success">Save changes</button>
-                        <button class="button modal-button" data-target="#modal">Cancel</button>
-                      </footer>
-                    </div>
-                  </div>
+
 
                 </div>
               </article>
@@ -562,4 +528,36 @@
         </div>
       </div>
     </footer>
+    <!-- MODALS -->
+    <div id="quickviewDefault" class="quickview">
+      <header class="quickview-header">
+        <p class="title">eSolia Tools</p>
+        <span class="delete" data-dismiss="quickview"></span>
+      </header>
+      <div class="quickview-body">
+        <div class="quickview-block">
+          Tools like Zerobin, eSolia Connect, SItemap <br>
+          Contact Info<br>
+        </div>
+      </div>
+      <footer class="quickview-footer">
+      </footer>
+    </div>
+    <div class="modal" id="modal">
+      <div class="modal-background"></div>
+      <div class="modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title">Modal title</p>
+          <button class="delete modal-button" data-target="#modal" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+          <!-- Content ... -->
+          Stuff
+        </section>
+        <footer class="modal-card-foot">
+          <button class="button is-success">Save changes</button>
+          <button class="button modal-button" data-target="#modal">Cancel</button>
+        </footer>
+      </div>
+    </div>
 {{ end }}
