--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -1,74 +1,48 @@
 <nav class="navbar is-info">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+    <a class="navbar-item" href="{{ .Site.BaseURL }}">
       <img src="/img/eSolia-Chicklet-Color-1024px.png" alt="eSolia Logo" >
     </a>
-    <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+    <div class="navbar-burger burger" data-target="navMenu">
       <span></span>
       <span></span>
       <span></span>
     </div>
   </div>
 
-  <div id="navbarExampleTransparentExample" class="navbar-menu">
+  <div class="navbar-menu" data-target="navMenu">
     <div class="navbar-start">
-      <a class="navbar-item" href="https://bulma.io/">
-        Home
+      <a class="navbar-item" href="{{ .Site.BaseURL }}">
+        <span class="icon"><i class="fas fa-home has-text-warning"></i></span>
       </a>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" href="/documentation/overview/start/">
-          Docs
-        </a>
-        <div class="navbar-dropdown is-boxed">
-          <a class="navbar-item" href="/documentation/overview/start/">
-            Overview
-          </a>
-          <a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
-            Modifiers
-          </a>
-          <a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
-            Columns
-          </a>
-          <a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-            Layout
-          </a>
-          <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
-            Form
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
-            Elements
-          </a>
-          <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
-            Components
-          </a>
-        </div>
+      {{- $currentPage := . -}}
+      {{- range .Site.Menus.main }}
+
+      <div class="navbar-item is-hoverable{{ if .HasChildren }} has-dropdown{{ end }}">
+        <a class="navbar-link{{ if $currentPage.HasMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+          {{ if .HasChildren -}}
+          <div class="navbar-dropdown is-boxed">
+            {{ range .Children -}}
+            <a class="navbar-item{{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+            {{ end }}
+          </div>
+          {{ end }}
       </div>
+      {{- end }}
     </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="field is-grouped">
-          <p class="control">
-            <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="http://localhost:4000" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=http://localhost:4000&amp;via=jgthms">
-              <span class="icon">
-                <i class="fab fa-twitter has-text-twitter"></i>
-              </span>
-              <span>
-                Tweet
-              </span>
-            </a>
-          </p>
-          <p class="control">
-            <a class="button is-primary" href="https://github.com/jgthms/bulma/archive/0.5.1.zip">
-              <span class="icon">
-                <i class="fas fa-download"></i>
-              </span>
-              <span>Download</span>
-            </a>
-          </p>
+          <a href="/search">
+            <span class="icon"><i class="fas fa-search has-text-warning"></i></span>
+          </a>
+          <a href="/search" data-show="quickview" data-target="quickviewDefault">
+            <span class="icon"><i class="fas fa-cog has-text-warning"></i></span>
+          </a>
         </div>
       </div>
     </div>
+
   </div>
 </nav>
