Add spacing helper classes, set lang menu spacing

--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -37,7 +37,7 @@
           <a href="/search">
             <span class="icon"><i class="fas fa-search has-text-warning"></i></span>
           </a>
-          <a href="/search" data-show="quickview" data-target="quickviewDefault">
+          <a class="has-margin-r-xs" href="/search" data-show="quickview" data-target="quickviewDefault">
             <span class="icon"><i class="fas fa-cog has-text-warning"></i></span>
           </a>
           {{ if .IsTranslated }}
