fixed hamburger menu. Needed main navbar-menu to have the id

--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="navbar-menu" data-target="navMenu">
+  <div class="navbar-menu" id="navMenu">
     <div class="navbar-start">
       <a class="navbar-item" href="{{ .Site.BaseURL }}">
         <span class="icon"><i class="fas fa-home has-text-warning"></i></span>
