Testing hover on cards

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -53,7 +53,7 @@
     </section>
     <section class="section">
     <div class="tile is-ancestor">
-        <div class="tile is-parent">
+        <div class="tile is-parent is-shaded">
           <article class="tile is-child box notification is-info">
             <p class="title">One</p>
             <p class="subtitle">Subtitle</p>
@@ -217,6 +217,15 @@
         </div>
       </nav>
     </section>
+
+    <!--
+<div class="box cta">
+    <p class="has-text-centered">
+      <span class="tag is-primary">New</span> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+    </div>
+ -->
+
     <section class="section is-marginless notification is-danger">
       <div class="columns is-centered">
         <div class="column">
