Start adding sidebar menu concept

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -512,31 +512,7 @@
 			</svg>
     </div>
 
-    <footer class="footer has-text-centered notification is-dark is-marginless">
 
-      <div class="container">
-
-         <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop">
-            <p>
-              <strong class="has-text-weight-semibold">
-                <a href="https://www.npmjs.com/package/bulma-start">bulma-start@0.0.1</a>
-              </strong>
-            </p>
-            <p>
-              <small>
-                Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
-              </small>
-            </p>
-            <p style="margin-top: 1rem;">
-              <a href="http://bulma.io">
-                <img src="made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
     <!-- MODALS -->
     <div id="quickviewDefault" class="quickview">
       <header class="quickview-header">
@@ -569,4 +545,7 @@
         </footer>
       </div>
     </div>
+{{ end }}
+{{ define "footer" }}
+    {{- partial "footer1.html" . -}}
 {{ end }}
