--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-info">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ .Site.BaseURL }}">
-      <img src="/img/eSolia-Chicklet-Color-1024px.png" alt="eSolia Logo" >
+      <img src="/img/eSolia Logo - White Opt 1206.png" alt="eSolia Logo" >
     </a>
     <div class="navbar-burger burger" data-target="navMenu">
       <span></span>
