Set modal on all pages, fixed path bug in search icon

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,8 @@
     {{ block "footer" . }}
     <!-- More shared code, perhaps a footer but that can be overridden if need be in  -->
     {{ end }}
+    {{ block "modals" . }}
+    {{ end }}
   </body>
 </html>
 
