--- a/layouts/page/services.html
+++ b/layouts/page/services.html
@@ -9,9 +9,7 @@
   <div class="column is-3 is-sidebar-menu is-hidden-mobile">
 
      <aside class="menu">
-
-
-  {{- $currentPage := . -}}
+       {{- $currentPage := . -}}
        {{ range .Site.Menus.services }}
          <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "services" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
           <ul class="menu-list">
@@ -22,10 +20,15 @@
           {{ end }}
           </ul>
        {{ end }}
+       {{- $currentPage := . -}}
+         <a class="is-hoverable"><p class="menu-label has-text-info">{{ i18n "other" | safeHTML }}</p></a>
+          <ul class="menu-list">
+       　　{{ range .Site.Menus.servicesother }}
+            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "servicesother" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+          {{ end }}
+          </ul>
 
-
-
-        <p class="menu-label has-text-info">Tags</p>
+       <p class="menu-label has-text-info">Tags</p>
        <div class="tags">
        {{ range .Params.tags }}
         <span class="tag is-rounded is-light"><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></span>
@@ -43,6 +46,9 @@
     </div>
   </div>
 </div>
+{{ end }}
+{{ define "modals" }}
+    {{- partial "modal1.html" . -}}
 {{ end }}
 {{ define "footer" }}
     {{- partial "footer1.html" . -}}
