--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
   <div class="column is-main-content">
     <div class="box">
       <p class="title is-5"><h1>{{ .Title }}</h1></p>
-      <p class="subtitle">This column will take up the remaining space available.</p>
+      <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
       {{ .Content }}
     </div>
   </div>
