Add pages to aboutside menu

--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -10,12 +10,12 @@
 
      <aside class="menu">
        {{- $currentPage := . -}}
-       {{ range .Site.Menus.about }}
-         <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "about" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
+       {{ range .Site.Menus.aboutside }}
+         <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "aboutside" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
           <ul class="menu-list">
           {{ if .HasChildren }}
           {{ range .Children }}
-            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "about" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+            <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "aboutside" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
           {{ end }}
           {{ end }}
           </ul>
