Change navbar color just to see

--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -1,5 +1,5 @@
 {{ "<!-- ENTERING partial nav1.html -->" | safeHTML }}
-<nav class="navbar is-info">
+<nav class="navbar is-primary">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ .Site.BaseURL }}">
       <img src="/img/eSolia Logo - White Opt 1206.png" alt="eSolia Logo" >
@@ -38,7 +38,7 @@
           <a href="/search">
             <span class="icon"><i class="fas fa-search has-text-warning"></i></span>
           </a>
-          <a class="has-margin-r-xs" data-show="quickview" data-target="quickviewDefault">
+          <a class="has-margin-r-s has-margin-l-s" data-show="quickview" data-target="quickviewDefault">
             <span class="icon"><i class="fas fa-cog has-text-warning"></i></span>
           </a>
           {{ if .IsTranslated }}
