--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -5,10 +5,9 @@
     {{- partial "nav1.html" . -}}
 {{ end }}
 {{ define "main" }}
-<div class="columns content is-fullheight">
+<div class="columns is-fullheight is-gapless">
   <div class="column is-3 is-sidebar-menu is-hidden-mobile">
-
-     <aside class="menu">
+     <aside class="menu content has-padding-t-m has-padding-l-m">
        {{- $currentPage := . -}}
        {{ range .Site.Menus.aboutside }}
          <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "aboutside" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-info">{{ .Name }}</p></a>
@@ -29,7 +28,7 @@
           </ul>
 
        <p class="menu-label has-text-info">Tags</p>
-       <div class="tags">
+       <div class="tags has-margin-l">
        {{ range .Params.tags }}
         <span class="tag is-rounded is-light"><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></span>
        {{ end }}
@@ -39,13 +38,14 @@
 
   </div>
   <div class="column is-main-content">
-    <div class="box">
-      <p class="title is-5"><h1>{{ .Title }}</h1></p>
-      <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
-      {{ .Content }}
-    </div>
+      <div class="box content is-medium has-margin-m has-padding-l">
+        <p class="title is-5"><h1>{{ .Title }}</h1></p>
+        <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
+        {{ .Content }}
+      </div>
   </div>
 </div>
+
 {{ end }}
 {{ define "modals" }}
     {{- partial "modal1.html" . -}}
