--- a/layouts/page/successes.html
+++ b/layouts/page/successes.html
@@ -38,7 +38,7 @@
 
   </div>
   <div class="column is-main-content">
-      <div class="box content is-medium has-margin-m has-padding-l">
+      <div class="box content is-medium has-margin-m has-padding-l-xl has-padding-b-xxl">
         <p class="title is-5"><h1>{{ .Title }}</h1></p>
         <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
         {{ .Content }}
