--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -208,6 +208,11 @@ $backgrounds: (bg-totsukabridge: '/img/Cogley-Banner-JR-Totsuka-Bridge-2-mono.jp
   border-left: 4px solid $info;
 }
 
+a.is-active > .menu-label {
+  background-color: $grey-lighter;
+  border-left: 4px solid $info;
+}
+
 // List
 .list-has-no-style {
   padding-left: 0;
