Setup home template to use nav-home partial instead of nav1
The variable passing is problematic on the home page

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,7 +2,7 @@
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
 {{ define "nav" }}
-    {{- partial "nav1.html" . -}}
+    {{- partial "nav-home.html" . -}}
 {{ end }}
 {{ define "main" }}
    <section class="hero is-medium hero-bg-totsukabridge">
